--- a/views/_booking_activities_multiple_dates_management.erb
+++ b/views/_booking_activities_multiple_dates_management.erb
@@ -1,6 +1,6 @@
         <div class="container_12">
-          <div class="grid_7">
-             <div class="bottom-margin bottom-space" style="border:1px solid #EEE">
+          <div class="grid_12">
+             <div class="bottom-margin bottom-space">
                   <%% if (entity.activity_dates.length > 0) { %>
                      <table class="table bottom-margin-line bottom-separator">
                         <thead class="table-header">
@@ -25,7 +25,7 @@
                   <%% } %>  
             </div>
           </div>
-          <div class="grid_5">
+          <div class="grid_12">
                 <div class="top-margin-top-space left-margin">
                    <button id="new_activity_date" type="button" class="form-button green-button" style="background: none; color:black;text-decoration:underline"><%=t.booking_activity_management.form.activity_date_new_date%></button>
                    <form name="activity_date" style="display:none">
