categories management + bug

--- a/views/booking_items_management.erb
+++ b/views/booking_items_management.erb
@@ -129,7 +129,7 @@
                             <div class="form-group">
                               <div class="col-xs-12">
                                   <label class="css-input switch switch-sm switch-primary">
-                                    <input type="checkbox" name="own_property" class="auto-submit-change-control" value="true" id="web_public" <%% if (entity && entity.own_property) { %>checked="checked"<%%}%>/><span></span>
+                                    <input type="checkbox" name="own_property" class="auto-submit-change-control" value="true" id="own_property" <%% if (entity && entity.own_property) { %>checked="checked"<%%}%>/><span></span>
                                   </label>
                               </div>
                             </div>
@@ -146,7 +146,7 @@
                             <div class="form-group">
                               <div class="col-xs-12">
                                   <label class="css-input switch switch-sm switch-primary">
-                                    <input type="checkbox" name="assignable" class="auto-submit-change-control" value="true" id="web_public" <%% if (entity && entity.assignable) { %>checked="checked"<%%}%>/><span></span>
+                                    <input type="checkbox" name="assignable" class="auto-submit-change-control" value="true" id="assignable" <%% if (entity && entity.assignable) { %>checked="checked"<%%}%>/><span></span>
                                   </label>
                               </div>
                             </div>
