--- a/views/booking_category_offers_management.erb
+++ b/views/booking_category_offers_management.erb
@@ -16,8 +16,8 @@
   <table id="elements_table" class="table">
      <thead class="table-header">
        <tr>
-         <th class="table-header-title" scope="col" style="width:15%">Fecha reserva desde</th>
-         <th class="table-header-title" scope="col" style="width:15%">Fecha reserva hasta</th>
+         <th class="table-header-title" scope="col" style="width:15%">Fecha inicio reserva</th>
+         <th class="table-header-title" scope="col" style="width:15%">Fecha fin reserva</th>
          <th class="table-header-title" scope="col" style="width:20%">Reserva realizada</th>
          <th class="table-header-title" scope="col" style="width:10%"><%= t.discount_management.table.discount %></th>
          <th class="table-header-title" scope="col" style="width:30%">Categorías</th>
@@ -37,8 +37,8 @@
       <td class="table-cell element-navigation-detail" rel="<%%= index %>"><%%= self.formatDate(entity.discount.source_date_from,'dd-MM-yyyy') %></td>
       <td class="table-cell element-navigation-detail" rel="<%%= index %>"><%%= self.formatDate(entity.discount.source_date_to,'dd-MM-yyyy') %></td>
       <td class="table-cell element-navigation-detail" rel="<%%= index %>"><%%= self.formatDate(entity.discount.date_from,'dd-MM-yyyy') %> a <%%= self.formatDate(entity.discount.date_to,'dd-MM-yyyy') %></td>
-      <td class="table-cell" rel="<%%= index %>"><%%= new Number(entity.discount.value).toFixed(2) %><%% if (entity.discount.discount_type=='percentage'){%>%<%%}%></td>
-      <td class="table-cell" rel="<%%= index %>"><%% for (var idx=0;idx<entity.booking_categories.length;idx++){%><%%= entity.booking_categories[idx].code%> <%%}%></td>
+      <td class="table-cell element-navigation-detail" rel="<%%= index %>"><%%= new Number(entity.discount.value).toFixed(2) %><%% if (entity.discount.discount_type=='percentage'){%>%<%%}%></td>
+      <td class="table-cell element-navigation-detail" rel="<%%= index %>"><%% for (var idx=0;idx<entity.booking_categories.length;idx++){%><%%= entity.booking_categories[idx].code%> <%%}%></td>
     </tr>
 
 </script>
@@ -54,56 +54,87 @@
 
 <script type="text/tmpl" id="element_template_form">
 
-     <form name="element" id="discount_management_form">
-      <div class="container_12">
-        <div class="form-fields grid_6">
-
-          <%% if (entity) { %>
-          <input type="hidden" id="id" name="id" value="<%%=entity.id%>"/>
-          <%% } %>
-
-          <div class="formrow">
-            <label for="date_from" class="fieldtitle"><%= t.discount_management.form.date_from %></label>
-             <input type="text" name="date_from" id="date_from" class="date_control" size="15" maxlength="10"/>
-          </div>
-
-          <div class="formrow">
-            <label for="date_to" class="fieldtitle"><%= t.discount_management.form.date_to %></label>
-             <input type="text" name="date_to" id="date_to" class="date_control" size="15" maxlength="10"/>
-          </div>
-
-          <div class="formrow">
-            <label for="source_date_from" class="fieldtitle"><%= t.discount_management.form.source_date_from %></label>
-             <input type="text" name="source_date_from" id="source_date_from" class="date_control" size="15" maxlength="10"/>
-          </div>
-
-          <div class="formrow">
-            <label for="source_date_to" class="fieldtitle"><%= t.discount_management.form.source_date_to %></label>
-             <input type="text" name="source_date_to" id="source_date_to" class="date_control" size="15" maxlength="10"/>
-          </div>
-
-          <div class="formrow">
-            <label for="date_to" class="fieldtitle"><%= t.discount_management.form.discount %></label>
-            <input type="text" name="value" id="value" class="fieldcontrol" size="30" maxlength="10" style="width:80%" <%% if (entity) { %> value="<%%= new Number(entity.value).toFixed(2) %>" <%% } %> />
-            <select name="discount_type" class="fieldcontrol" id="discount_type">
-              <option value="percentage"><%= t.discount_management.form.percentage %></option>
-              <option value="amount"><%= t.discount_management.form.amount %></option>
-            </select>
-          </div>
-
-          <div class="bottom-navigation-bar navigation-bar">
-             <div class="navigation-bar-crud-buttons">
-                <%% if (entity) { %>
-                  <input type="submit" class="update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
-                <%% }
-                   else { %>
-                  <input type="submit" class="create-entity-button action-button entity-management-button" value="<%=t.entitymanagement.create%>"/>
-                <%% } %>
-             </div>
+        <div class="row">
+          <div class="col-sm-12 col-md-10 col-md-offset-1">
+                <div class="alert alert-info">
+                  <p>Una oferta está vigente para las reservas cuya <b>fecha de entrega</b> y <b>devolución</b>
+                  estén entre la fecha de inicio y fin de la reserva, que se reciban en el período
+                  indicado.<p>
+                </div>
           </div>
         </div>
-      </div>
-     </form>
+
+        <div class="row">
+          <div class="col-sm-12 col-md-10 col-md-offset-1">
+            <div class="block block-content-full">
+              <div class="block-header bg-gray-lighter">
+                <h3 class="block-title">Datos de la oferta</h3>
+              </div>
+              <div class="block-content block-content-narrow">
+                <form name="element"id="booking_offer_form"  method="POST" class="form-horizontal">
+                  <%% if (entity) { %>
+                  <input type="hidden" id="id" name="id" value="<%%=entity.id%>"/>
+                  <%% } %>
+                  <div class="form-group">
+                    <label class="col-sm-3">Fecha inicio reserva</label>
+                    <div class="col-sm-9">
+                      <input type="text" maxlength="15" id="source_date_from" name="discount[source_date_from]" class="form-control date_control"/>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-sm-3">Fecha fin reserva</label>
+                    <div class="col-sm-9">
+                      <input type="text" maxlength="15" id="source_date_to" name="discount[source_date_to]" class="form-control date_control"/>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-sm-3">Reserva realizada desde</label>
+                    <div class="col-sm-9">
+                      <input type="text" maxlength="15" id="date_from" name="discount[date_from]" class="form-control date_control"/>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-sm-3">Reserva realizada hasta</label>
+                    <div class="col-sm-9">
+                      <input type="text" maxlength="15" id="date_to" name="discount[date_to]" class="form-control date_control"/>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-sm-3"><%= t.discount_management.form.discount %></label>
+                    <div class="col-sm-4">
+                      <input type="text" maxlength="80" id="value" name="discount[value]" class="form-control" <%% if (entity && entity.discount) {%> value="<%%=new Number(entity.discount.value).toFixed(2) %>" <%% } %>/>
+                    </div>
+                    <div class="col-sm-4">
+                      <select name="discount[discount_type]" class="form-control" id="discount_type">
+                        <option value="percentage"><%= t.promotion_code_management.form.percentage %></option>
+                        <option value="amount"><%= t.promotion_code_management.form.amount %></option>
+                      </select>
+                    </div>
+                  </div>
+
+                  <div class="form-group">
+                    <label class="col-sm-3">Categorías</label>
+                    <div class="col-sm-9">
+                       <div id="booking_categories">
+                       </div>
+                    </div>
+                  </div>
+
+                  <div class="form-group">
+                    <div class="col-md-9">
+                        <%% if (entity) { %>
+                        <input type="button" class="btn btn-sm btn-primary update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
+                        <%% } else { %>
+                        <input type="button" class="btn btn-sm btn-primary create-entity-button action-button entity-management-button" value="<%=t.entitymanagement.create%>"/>
+                        <%% } %>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+
 
 
 </script>
