--- a/views/booking_category_offers_management.js.erb
+++ b/views/booking_category_offers_management.js.erb
@@ -1,8 +1,8 @@
-require(['jquery', 'YSDEntityManagement', 'YSDForms',
+require(['jquery', 'YSDEntityManagement',  'YSDRemoteDataSource', 'YSDListSelector', 'YSDForms',
         'jquery.validate','json2',
         'jquery.ui', 'jquery.ui.datepicker-es', 'jquery.ui.datepicker.validation',
         'autonumeric'],
-    function($, EntityManagement, YSDForms) {
+    function($, EntityManagement, RemoteDataSource, ListSelector, YSDForms) {
 
 
         function DiscountHook() {
@@ -43,13 +43,18 @@ require(['jquery', 'YSDEntityManagement', 'YSDForms',
                     locale);
 
                 if (entity) {
-                    $('#date_from').datetimepicker('setDate', entity.date_from);
-                    $('#date_to').datetimepicker('setDate', entity.date_to);
-                    $('#source_date_from').datetimepicker('setDate', entity.source_date_from);
-                    $('#source_date_to').datetimepicker('setDate', entity.source_date_to);
+                    $('#date_from').datetimepicker('setDate', entity.discount.date_from);
+                    $('#date_to').datetimepicker('setDate', entity.discount.date_to);
+                    $('#source_date_from').datetimepicker('setDate', entity.discount.source_date_from);
+                    $('#source_date_to').datetimepicker('setDate', entity.discount.source_date_to);
                 }
 
                 $('#value').autoNumeric('init',{aSep:''});
+
+                var categoriesDataSource = new RemoteDataSource('/api/booking-categories',{id:'code', description:'code'});
+                var categoriesValue = (entity&&entity.booking_categories)?entity.booking_categories.map(function(item){return item.code;}):[];
+                var categoriesSelector = new ListSelector('booking_categories', 'booking_categories[]', categoriesDataSource, categoriesValue );
+
 
                 this.configValidation();
 
@@ -76,6 +81,7 @@ require(['jquery', 'YSDEntityManagement', 'YSDForms',
 
             }
 
+
         };
 
         var urls = {
@@ -87,8 +93,7 @@ require(['jquery', 'YSDEntityManagement', 'YSDForms',
         };
 
         var discountHook = new DiscountHook();
-        var reateFactorManager = new EntityManagement(urls, 'discount',
-            <%=discount_page_size%>, discountHook,
+        var reateFactorManager = new EntityManagement(urls, 'booking_offer', <%=discount_page_size%>, discountHook,
             {prefix: '/admin/booking'});
 
     });
