--- a/views/booking_category_offers_management.erb
+++ b/views/booking_category_offers_management.erb
@@ -88,6 +88,15 @@
                     </div>
                   </div>
                   <div class="form-group">
+                    <label class="col-sm-3">Regla de las fechas de reserva</label>
+                    <div class="col-sm-8">
+                      <select name="reservation_dates_rule" class="form-control" id="reservation_dates_rule">
+                        <option value="from_included"  <%% if (entity.reservation_dates_rule == 'from_included'){%>selected<%%}%> >Fecha inicio reserva del cliente incluida</option>
+                        <option value="all_included" <%% if (entity.reservation_dates_rule == 'all_included'){%>selected<%%}%> >Fecha de inicio y fin de la reserva del cliente incluida</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="form-group">
                     <label class="col-sm-3">Reserva realizada desde</label>
                     <div class="col-sm-9">
                       <input type="text" maxlength="15" id="date_from" name="discount[date_from]" class="form-control date_control"/>
@@ -111,7 +120,6 @@
                       </select>
                     </div>
                   </div>
-
                   <div class="form-group">
                     <label class="col-sm-3">Categorías</label>
                     <div class="col-sm-9">
